# mayones

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Cargo.toml  README.md  requirements-dev.txt  vcpkg.json
.github/workflows/: common.yml  dev.yml  dev_ci.yml
include/: bus.h  cartridge.h  cpu.h  mapper.h
src/: CMakeLists.txt  bus.cpp  bus.rs  cartridge.cpp  cpu.cpp  cpu.rs  emulator.rs  main.cpp  main.rs  mapper.cpp  mapper.rs  rom.rs
src/app/: CMakeLists.txt  app.cpp  config.cpp  version.hpp.in
src/app/include/mayones/app/: app.hpp  config.hpp
tests/: CMakeLists.txt
tests/app/: CMakeLists.txt  test_config.cpp
